--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Tal vez no sean reales, pero mi mejor amiga no se queda sin sus flores amarillas</h1>
-        <h1>TQM <3</h1>
+        <h1>Tqm Jhuli <3</h1>
         <div class="flower-container">
             <!-- Las flores se agregarán y eliminarán aquí mediante JavaScript -->
         </div>
