--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
     <div class="container">
         <h1>Tal vez no sean reales, pero mi mejor amiga no se queda sin sus flores amarillas</h1>
         <h1>Tqm Jhuli <3</h1>
+
+        <!-- 🎵 Reproductor de música con controles -->
+        <audio controls loop>
+            <source src="musica.mp3" type="audio/mpeg">
+            Tu navegador no soporta audio.
+        </audio>
+
         <div class="flower-container">
             <!-- Las flores se agregarán y eliminarán aquí mediante JavaScript -->
         </div>
     </div>
+
     <script src="script.js"></script>
 </body>
 </html>
