--- a/index.html
+++ b/index.html
@@ -12,10 +12,9 @@
         <h1>Tqm Jhuli <3</h1>
 
         <!-- 🎵 Reproductor de música con controles -->
-        <audio controls loop>
-            <source src="musica.mp3" type="audio/mpeg">
-            Tu navegador no soporta audio.
-        </audio>
+ <audio autoplay loop hidden>
+  <source src="musica.mp3" type="audio/mpeg">
+</audio>
 
         <div class="flower-container">
             <!-- Las flores se agregarán y eliminarán aquí mediante JavaScript -->
