--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
         <h1>Tal vez no sean reales, pero mi mejor amiga no se queda sin sus flores amarillas</h1>
         <h1>Tqm Jhuli <3</h1>
 
-    
+    <audio autoplay loop hidden>
+  <source src="musica.mp3" type="audio/mpeg">
+</audio>
 
         <div class="flower-container">
             <!-- Las flores se agregarán y eliminarán aquí mediante JavaScript -->
