--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 
 <audio id="musica" loop hidden>
   <source src="musica.mp3" type="audio/mpeg">
+  <source src="musica.ogg" type="audio/ogg">
 </audio>
 
 <script>
