--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
 
     <button id="playBtn">Reproducir música</button>
 
-<audio id="musica" loop hidden>
+<audio autoplay loop controls>
   <source src="musica.mp3" type="audio/mpeg">
-  <source src="musica.ogg" type="audio/ogg">
+  Tu navegador no soporta audio.
 </audio>
 
 <script>
-const audio = document.getElementById('musica');
-document.getElementById('playBtn').addEventListener('click', () => {
-  audio.play();
+window.addEventListener('load', () => {
+  const audio = document.getElementById('musica');
+  audio.play().catch(() => {
+    console.log("Autoplay bloqueado, espera interacción del usuario");
+  });
 });
 </script>
 
